radix-engine-tests/tests/dec_macros/src/pdec_err_float_suffix.stderr
error: No suffix is allowed. Remove the f64.
 --> src/pdec_err_float_suffix.rs:4:29
  |
4 |     const X: Decimal = dec!(11.12f64);
  |                             ^^^^^^^^
